<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="Темный фон"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linear_layout_0"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/linearlayout_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_0"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/city"
            android:textColor="@color/text_color"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/date_0"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/temperature_0"
                    android:layout_width="74dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="45dp"
                    android:gravity="center_vertical|end"
                    android:text="@string/temperature"
                    android:textColor="@color/text_color"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/weather_picture_0"
                    android:layout_width="69dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="35dp"
                    android:alpha="0.8"
                    app:srcCompat="@drawable/daytime_rain" />
            </FrameLayout>

        </LinearLayout>

        <FrameLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_wind"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="94dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/autumn" />

            <TextView
                android:id="@+id/wind_0"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="58dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/wind"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/image_pressure"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="18dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                app:srcCompat="@drawable/barometer" />

            <TextView
                android:id="@+id/pressure_0"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="18dp"
                android:gravity="center_vertical"
                android:text="1000"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/image_humidity"
                android:layout_width="30dp"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginStart="58dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/drop" />

            <TextView
                android:id="@+id/humidity_0"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="94dp"
                android:gravity="center_vertical"
                android:text="@string/humidity"
                android:textColor="@color/text_color"
                android:textSize="12sp" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/linearlayout_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_in_item_1"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:gravity="bottom"
                android:text="@string/date_1"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_in_item_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/day_of_week_1"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/temperature_in_item_1"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/temperature_1"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/weather_picture_in_item_1"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:alpha="0.8"
            app:srcCompat="@drawable/lightning" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/linearlayout_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_in_item_2"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:gravity="bottom"
                android:text="@string/date_2"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_in_item_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/day_of_week_2"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/temperature_in_item_2"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/temperature_2"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/weather_picture_in_item_2"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:alpha="0.8"
            app:srcCompat="@drawable/sun" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/linearlayout_background"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_in_item_3"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:gravity="bottom"
                android:text="@string/date_3"
                android:textColor="@color/text_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/day_of_week_in_item_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/day_of_week_3"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/temperature_in_item_3"
            android:layout_width="74dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/temperature_3"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/weather_picture_in_item_3"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:alpha="0.8"
            app:srcCompat="@drawable/daytime_rain" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="Название города" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Сменить город" />

    </LinearLayout>

</LinearLayout>